--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,22 @@
 #chart {
   width:100%;
+  overflow-x:hidden;
+  overflow-y:hidden;
+}
+
+.example-container {
+  width: 500px;
+  height: 300px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+.example-sidenav-content {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.example-sidenav {
+  padding: 20px;
 }
