--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,89 @@
-<app-navigation></app-navigation>
-<div id="chart">
-  <apx-chart *ngIf="chartOptions"
-    [series]="chartOptions.series!"
-    [chart]="chartOptions.chart!"
-    [xaxis]="chartOptions.xaxis!"
-    [yaxis]="chartOptions.yaxis!"
-    [title]="chartOptions.title!"
-  ></apx-chart>
+<!-- <div>
+<mat-toolbar>
+  Responsive side navigation
+  </mat-toolbar>
+
+  <mat-sidenav-container>
+
+    <mat-sidenav class="mat-elevation-z8">
+      <button mat-button class="menu-button">
+          <mat-icon>home</mat-icon>
+          <span>Home</span>
+      </button>
+      <button mat-button class="menu-button">
+          <mat-icon>person</mat-icon>
+          <span>Profile</span>
+      </button>
+      <button mat-button class="menu-button">
+          <mat-icon>info</mat-icon>
+          <span>About</span>
+      </button>
+
+      <mat-divider></mat-divider>
+
+      <button mat-button class="menu-button">
+          <mat-icon>help</mat-icon>
+          <span>Help</span>
+      </button>
+
+  </mat-sidenav>
+
+      <mat-sidenav-content>
+          <div class="content mat-elevation-z8">
+            <div id="chart">
+              <apx-chart *ngIf="chartOptions"
+                [series]="chartOptions.series!"
+                [chart]="chartOptions.chart!"
+                [xaxis]="chartOptions.xaxis!"
+                [yaxis]="chartOptions.yaxis!"
+                [title]="chartOptions.title!"
+              ></apx-chart>
+            </div>
+          </div>
+      </mat-sidenav-content>
+  </mat-sidenav-container>
 </div>
+ -->
+ <mat-toolbar color="primary">
+  <mat-toolbar-row (click)="drawer.toggle()">
+    <button mat-icon-button>
+      <mat-icon>menu</mat-icon>
+    </button>
+    <h1>ALPHA</h1><br>
+  </mat-toolbar-row>
+
+  <mat-toolbar-row>
+      <span style="font-size: 12px;">Market research all in one place</span>
+    </mat-toolbar-row>
+</mat-toolbar>
+
+<mat-drawer-container autosize>
+  <mat-drawer #drawer class="example-sidenav" mode="over">
+    <p>Auto-resizing sidenav</p>
+    <button mat-button class="menu-button">
+      <mat-icon>home</mat-icon>
+      <span>Home</span>
+  </button>
+  <button mat-button class="menu-button">
+      <mat-icon>person</mat-icon>
+      <span>Profile</span>
+  </button>
+  <button mat-button class="menu-button">
+      <mat-icon>info</mat-icon>
+      <span>About</span>
+  </button>
+
+  </mat-drawer>
+
+<div class="content mat-elevation-z8">
+  <div id="chart">
+    <apx-chart *ngIf="chartOptions"
+      [series]="chartOptions.series!"
+      [chart]="chartOptions.chart!"
+      [xaxis]="chartOptions.xaxis!"
+      [yaxis]="chartOptions.yaxis!"
+      [title]="chartOptions.title!"
+    ></apx-chart>
+  </div>
+
+
