--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,89 +1,44 @@
-<!-- <div>
-<mat-toolbar>
-  Responsive side navigation
-  </mat-toolbar>
-
-  <mat-sidenav-container>
-
-    <mat-sidenav class="mat-elevation-z8">
-      <button mat-button class="menu-button">
-          <mat-icon>home</mat-icon>
-          <span>Home</span>
-      </button>
-      <button mat-button class="menu-button">
-          <mat-icon>person</mat-icon>
-          <span>Profile</span>
-      </button>
-      <button mat-button class="menu-button">
-          <mat-icon>info</mat-icon>
-          <span>About</span>
-      </button>
-
-      <mat-divider></mat-divider>
-
-      <button mat-button class="menu-button">
-          <mat-icon>help</mat-icon>
-          <span>Help</span>
-      </button>
-
-  </mat-sidenav>
-
-      <mat-sidenav-content>
-          <div class="content mat-elevation-z8">
-            <div id="chart">
-              <apx-chart *ngIf="chartOptions"
-                [series]="chartOptions.series!"
-                [chart]="chartOptions.chart!"
-                [xaxis]="chartOptions.xaxis!"
-                [yaxis]="chartOptions.yaxis!"
-                [title]="chartOptions.title!"
-              ></apx-chart>
-            </div>
-          </div>
-      </mat-sidenav-content>
-  </mat-sidenav-container>
-</div>
- -->
- <mat-toolbar color="primary">
+<mat-toolbar color="primary">
   <mat-toolbar-row (click)="drawer.toggle()">
     <button mat-icon-button>
       <mat-icon>menu</mat-icon>
     </button>
-    <h1>ALPHA</h1><br>
+    <h1>CM Investment Analytics</h1>
   </mat-toolbar-row>
-
-  <mat-toolbar-row>
-      <span style="font-size: 12px;">Market research all in one place</span>
-    </mat-toolbar-row>
 </mat-toolbar>
 
 <mat-drawer-container autosize>
   <mat-drawer #drawer class="example-sidenav" mode="over">
-    <p>Auto-resizing sidenav</p>
-    <button mat-button class="menu-button">
-      <mat-icon>home</mat-icon>
-      <span>Home</span>
-  </button>
-  <button mat-button class="menu-button">
-      <mat-icon>person</mat-icon>
-      <span>Profile</span>
-  </button>
-  <button mat-button class="menu-button">
-      <mat-icon>info</mat-icon>
-      <span>About</span>
-  </button>
+    <p>Image goes here perhaps</p>
 
+    <button mat-button class="menu-button"
+    routerLink="/dashboard" routerLinkActive="active" ariaCurrentWhenActive="page">
+      <mat-icon>dashboard</mat-icon>
+      <span> Dashboard</span>
+    </button>
+
+    <button mat-button class="menu-button"
+    routerLink="/news" routerLinkActive="active" ariaCurrentWhenActive="page">
+      <mat-icon>library_books</mat-icon>
+      <span> Market news</span>
+    </button>
+
+    <button mat-button class="menu-button">
+      <mat-icon>trending_up</mat-icon>
+      <span> Search stocks</span>
+    </button>
+
+    <button mat-button class="menu-button">
+      <mat-icon>memory</mat-icon>
+      <span> Predictive learning</span>
+    </button>
+    <button mat-button class="menu-button">
+      <mat-icon>account_box</mat-icon>
+      <span> My account</span>
+    </button>
   </mat-drawer>
 
-<div class="content mat-elevation-z8">
-  <div id="chart">
-    <apx-chart *ngIf="chartOptions"
-      [series]="chartOptions.series!"
-      [chart]="chartOptions.chart!"
-      [xaxis]="chartOptions.xaxis!"
-      [yaxis]="chartOptions.yaxis!"
-      [title]="chartOptions.title!"
-    ></apx-chart>
+  <div>
+    <router-outlet></router-outlet>
   </div>
-
-
+</mat-drawer-container>
