--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,1 +1,3 @@
-<p> THIS WILL EVENTUALLY BE POPULATED WITH NEWS ARTICLES </p>
+<div class="content mat-elevation-z8">
+    <p> THIS WILL EVENTUALLY BE POPULATED WITH NEWS ARTICLES </p>
+</div>
