--- a/src/styles.css
+++ b/src/styles.css
@@ -6,36 +6,11 @@ body {
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-/* Angular material */
-mat-toolbar {
-  background: #004a9f;
-  color: white;
-}
-
-mat-sidenav {
-  margin: 16px;
-  width: 200px;
-  border-right: none;
-  background: #002b5c;
-  color: white;
-  border-radius: 10px;
-  padding: 16px;
-  text-align: center;
-}
-
 .content {
-  height: calc(100vh - 98px);
+  height: calc(100vh - 130px);
   border-radius: 10px;
   margin: 16px;
   margin-left: 32px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  font-size: 2rem;
-}
-
-mat-sidenav-container {
-  height: calc(100vh - 65px);
+  padding: 16px;
+  overflow: auto;
 }
