--- a/frontend/src/app/stocks/stocks.component.html
+++ b/frontend/src/app/stocks/stocks.component.html
@@ -33,7 +33,13 @@
       <th mat-header-cell *matHeaderCellDef>
         Change
       </th>
-      <td mat-cell *matCellDef="let element"> {{element[4]}} </td>
+      <td mat-cell *matCellDef="let element"
+        [ngClass]="{
+          'positive' : element[4] > 0,
+          'negative' : element[4]  < 0
+       }">
+       {{element[4] + "%"}}
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
