--- a/frontend/src/app/stocks/stocks.component.css
+++ b/frontend/src/app/stocks/stocks.component.css
@@ -1,9 +1,18 @@
-table {
+table, .mat-table {
   width: 100%;
+  background-color:inherit !important;
 }
 
-th.mat-sort-header-sorted {
+tr.mat-row:hover { 
+  cursor:grab !important;
+  background-color:rgba(0,74,159, 0.2);
+  text-shadow: 0 0 1px black;
+  transition-delay:0.5ms;
+}
+
+th.mat-sort-header-sorted, th {
   color: black;
+  font-weight:bold;
 }
 
 .positive {
