--- a/frontend/src/app/stocks/stocks.component.html
+++ b/frontend/src/app/stocks/stocks.component.html
@@ -1,13 +1,8 @@
-<div class="content mat-elevation-z8">
-  <!-- <mat-form-field class="searchBar">
-    <input
-      (keyup)="applyFilter($any($event.target).value)"
-      matInput
-      matIcon = "search"
-      placeholder= "Search"
-    />
-  </mat-form-field> -->
+<div class="content mat-elevation-z5">
   <form>
+    <button mat-button color="primary" (click)='onBack()'>
+      <mat-icon>home</mat-icon>
+    </button>
     <mat-form-field class="searchBar">
       <mat-label>Search</mat-label>
       <input  
@@ -30,7 +25,7 @@
       >
         Ticker
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.T }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.T}}</td>
     </ng-container>
 
     <!-- Volume Column -->
@@ -41,7 +36,7 @@
       >
         Volume
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.V }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.V | number}}</td>
     </ng-container>
 
     <!-- Open Column -->
@@ -52,7 +47,7 @@
       >
         Open
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.O }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.O | number : '.2-3'}}</td>
     </ng-container>
 
     <!-- Close Column -->
@@ -63,7 +58,7 @@
       >
         Close
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.C }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.C | number : '.2-3'}}</td>
     </ng-container>
 
     <!-- Change Column -->
@@ -81,12 +76,21 @@
           positive: element.M > 0,
           negative: element.M < 0
         }"
-      >
+      > 
+      <span *ngIf='element.M > 0'>
+        <mat-icon>trending_up</mat-icon>
+      </span>
+      <span *ngIf='element.M < 0'>
+        <mat-icon>trending_down</mat-icon>
+      </span>
+      <span *ngIf='element.M == 0'>
+        <mat-icon>trending_flat</mat-icon>
+      </span>
         {{ element.M + "%" }}
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr mat-row matRipple *matRowDef="let row; columns: displayedColumns" [routerLink]="['/stocks', row.T]"></tr>
   </table>
 </div>
