--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -3,8 +3,15 @@ body {
   font-size:16px;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body { 
+  height: 100%; 
+}
+
+body { 
+  margin: 0; 
+  font-family: Roboto, "Helvetica Neue", sans-serif; 
+  background-color:white;
+}
 
 .content {
   height: calc(100vh - 130px);
