--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -8,5 +8,11 @@
       [title]="chartOptions.title!"
     ></apx-chart>
   </div>
+  <div class="spinbox" *ngIf="isLoading">
+    <mat-progress-spinner 
+      color="primary" 
+      mode="indeterminate">
+    </mat-progress-spinner>
+  </div>
 </div>
 
