--- a/frontend/src/app/stocks/stocks.component.html
+++ b/frontend/src/app/stocks/stocks.component.html
@@ -1,74 +1,50 @@
 <div class="content mat-elevation-z5">
   <form>
-    <button mat-button color="primary" (click)='onBack()'>
+    <button mat-button color="primary" (click)="onBack()">
       <mat-icon>home</mat-icon>
     </button>
     <mat-form-field class="searchBar">
       <mat-label>Search</mat-label>
-      <input  
-      (keyup)="applyFilter($any($event.target).value)"
-      matInput 
-      placeholder="TSLA"
-      >
+      <input
+        (keyup)="applyFilter($any($event.target).value)"
+        matInput
+        placeholder="TSLA"
+      />
     </mat-form-field>
   </form>
 
-  <table
-    mat-table
-    [dataSource]="dataSource"
-  >
+  <table mat-table [dataSource]="dataSource">
     <!-- Ticker Column -->
     <ng-container matColumnDef="Ticker">
-      <th
-        mat-header-cell
-        *matHeaderCellDef
-      >
-        Ticker
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.T}}</td>
+      <th mat-header-cell *matHeaderCellDef>Ticker</th>
+      <td mat-cell *matCellDef="let element">{{ element.T }}</td>
     </ng-container>
 
     <!-- Volume Column -->
     <ng-container matColumnDef="Volume">
-      <th
-        mat-header-cell
-        *matHeaderCellDef
-      >
-        Volume
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.V | number}}</td>
+      <th mat-header-cell *matHeaderCellDef>Volume</th>
+      <td mat-cell *matCellDef="let element">{{ element.V | number }}</td>
     </ng-container>
 
     <!-- Open Column -->
     <ng-container matColumnDef="Open">
-      <th
-        mat-header-cell
-        *matHeaderCellDef
-      >
-        Open
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.O | number : '.2-3'}}</td>
+      <th mat-header-cell *matHeaderCellDef>Open</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.O | number: ".2-3" }}
+      </td>
     </ng-container>
 
     <!-- Close Column -->
     <ng-container matColumnDef="Close">
-      <th
-        mat-header-cell
-        *matHeaderCellDef
-      >
-        Close
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.C | number : '.2-3'}}</td>
+      <th mat-header-cell *matHeaderCellDef>Close</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.C | number: ".2-3" }}
+      </td>
     </ng-container>
 
     <!-- Change Column -->
     <ng-container matColumnDef="Change">
-      <th
-        mat-header-cell
-        *matHeaderCellDef
-      >
-        Change
-      </th>
+      <th mat-header-cell *matHeaderCellDef>Change</th>
       <td
         mat-cell
         *matCellDef="let element"
@@ -76,21 +52,32 @@
           positive: element.M > 0,
           negative: element.M < 0
         }"
-      > 
-      <span *ngIf='element.M > 0'>
-        <mat-icon>trending_up</mat-icon>
-      </span>
-      <span *ngIf='element.M < 0'>
-        <mat-icon>trending_down</mat-icon>
-      </span>
-      <span *ngIf='element.M == 0'>
-        <mat-icon>trending_flat</mat-icon>
-      </span>
+      >
+        <span *ngIf="element.M > 0">
+          <mat-icon>trending_up</mat-icon>
+        </span>
+        <span *ngIf="element.M < 0">
+          <mat-icon>trending_down</mat-icon>
+        </span>
+        <span *ngIf="element.M == 0">
+          <mat-icon>trending_flat</mat-icon>
+        </span>
         {{ element.M + "%" }}
       </td>
     </ng-container>
-
+    <!-- Table entries -->
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row matRipple *matRowDef="let row; columns: displayedColumns" [routerLink]="['/stocks', row.T]"></tr>
+    <tr
+      mat-row
+      *matRowDef="let row; columns: displayedColumns"
+      [routerLink]="['/stocks', row.T]"
+    ></tr>
   </table>
+  <!-- Loader -->
+  <div class="spinbox" *ngIf="isLoading">
+    <mat-progress-spinner 
+      color="primary" 
+      mode="indeterminate">
+    </mat-progress-spinner>
+  </div>
 </div>
