--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -18,6 +18,6 @@ body {
   border-radius: 10px;
   margin: 16px;
   margin-left: 32px;
-  padding: 16px;
+  padding: 0px 16px 16px 16px;
   overflow: auto;
 }
