--- a/frontend/src/app/stocks/stocks.component.html
+++ b/frontend/src/app/stocks/stocks.component.html
@@ -17,7 +17,9 @@
     <!-- Ticker Column -->
     <ng-container matColumnDef="Ticker">
       <th mat-header-cell *matHeaderCellDef>Ticker</th>
-      <td mat-cell *matCellDef="let element">{{ element.T }}</td>
+      <td mat-cell *matCellDef="let element">
+        <u>{{ element.T }}</u>
+      </td>
     </ng-container>
 
     <!-- Volume Column -->
@@ -30,7 +32,7 @@
     <ng-container matColumnDef="Open">
       <th mat-header-cell *matHeaderCellDef>Open</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.O | number: ".2-3" }}
+        {{ element.O | currency:'USD':'symbol':"1.2-3"}}
       </td>
     </ng-container>
 
@@ -38,7 +40,7 @@
     <ng-container matColumnDef="Close">
       <th mat-header-cell *matHeaderCellDef>Close</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.C | number: ".2-3" }}
+        {{ element.C | currency:'USD':'symbol':"1.2-3"}}
       </td>
     </ng-container>
 
@@ -75,9 +77,7 @@
   </table>
   <!-- Loader -->
   <div class="spinbox" *ngIf="isLoading">
-    <mat-progress-spinner 
-      color="primary" 
-      mode="indeterminate">
+    <mat-progress-spinner color="primary" mode="indeterminate">
     </mat-progress-spinner>
   </div>
 </div>
