--- a/frontend/src/app/stocks/stock-detail/stock-detail.component.html
+++ b/frontend/src/app/stocks/stock-detail/stock-detail.component.html
@@ -13,7 +13,11 @@
       </mat-select>
     </mat-form-field>
   </div>
-
+  <!-- Loader -->
+  <div class="spinbox" *ngIf="isLoading">
+    <mat-progress-spinner color="primary" mode="indeterminate">
+    </mat-progress-spinner>
+  </div>
   <stockChart
     *ngIf="!isLoading"
     [dataPoints]="dataPoints"
@@ -27,7 +31,8 @@
     </mat-expansion-panel-header>
     <div *ngIf="detailsLoaded">
       <h3>
-        {{details.name}}
+        <span *ngIf="details.name"> {{details.name}} </span>
+        <span *ngIf="details.name == null"> There is no information on this security</span>
       </h3>
       <p>
         <span *ngIf="details.description"> {{details.description}} </span>
