--- a/frontend/src/app/stocks/stocks.component.html
+++ b/frontend/src/app/stocks/stocks.component.html
@@ -68,7 +68,7 @@
       </td>
     </ng-container>
     <!-- Table entries -->
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true;"></tr>
     <tr
       mat-row
       *matRowDef="let row; columns: displayedColumns"
