--- a/frontend/src/app/shared/component/charts/chart.component.html
+++ b/frontend/src/app/shared/component/charts/chart.component.html
@@ -1,4 +1,35 @@
 <div id="chart">
+  <button
+  (click)="updateOptions( '1m' )"
+  [class.active]="activeOptionButton=='1m'"
+  >
+    1M
+  </button>
+  <button
+    (click)="updateOptions( '6m' )"
+    [class.active]="activeOptionButton=='6m'"
+  >
+    6M
+  </button>
+  <button
+    (click)="updateOptions( '1y' )"
+    [class.active]="activeOptionButton=='1y'"
+  >
+    1Y
+  </button>
+  <button
+    (click)="updateOptions( '3y' )"
+    [class.active]="activeOptionButton=='3y'"
+  >
+    1YD
+  </button>
+  <button
+    (click)="updateOptions( 'all' )"
+    [class.active]="activeOptionButton=='all'"
+  >
+    All
+  </button>
+
     <apx-chart
       *ngIf="chartOptions"
       [series]="chartOptions.series!"
