--- a/frontend/src/app/stocks/stock-detail/stock-detail.component.html
+++ b/frontend/src/app/stocks/stock-detail/stock-detail.component.html
@@ -1,7 +1,7 @@
 <div class="content mat-elevation-z5">
 
   <div>
-    <button mat-button color="primary" (click)="onBack()">
+    <button mat-button color="primary" (click)="onBack(false)">
       <mat-icon>arrow_back</mat-icon>
       <p>Go back</p>
     </button>
