Frontend JWT storaged and deletion. need to improve error messages on frontend and create registration

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -34,7 +34,7 @@
 
     <mat-divider></mat-divider>
 
-    <button mat-button class="menu-button" routerLink="/help">
+    <button mat-button class="menu-button" (click)="logout()">
       <mat-icon>logout</mat-icon>
       <span>Sign out</span>
     </button>
