--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -10,3 +10,12 @@
     margin:0.5rem;
     width:8rem;
 }
+
+p, .error {
+    font-size:16px;
+}
+
+.error {
+    color: darkred;
+    font-weight:bold;
+}
