--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,39 +1,20 @@
 <div class="content mat-elevation-z5">
-  <div>
-    <div class="movement" [ngClass]="{
-        positive: dailyMovement> 0,
-        negative: dailyMovement < 0
-      }" *ngIf="dailyMovement != null">
-        <span *ngIf="dailyMovement > 0">
-          <mat-icon>trending_up</mat-icon>
-        </span>
-        <span *ngIf="dailyMovement < 0">
-          <mat-icon>trending_down</mat-icon>
-        </span>
-        <span *ngIf="dailyMovement == 0">
-          <mat-icon>trending_flat</mat-icon>
-        </span> 
-        <h2>
-        {{ dailyMovement + "%" }}
-        </h2>
-    </div>
-    <mat-form-field appearance="fill">
-      <mat-label>Change chart</mat-label>
-      <mat-select [(value)]="selectedChart">
-        <mat-option value="area">Area</mat-option>
-        <mat-option value="candlestick">Candle stick</mat-option>
-      </mat-select>
-    </mat-form-field>
-  </div>
   <!-- Loader -->
   <div class="spinbox" *ngIf="isLoading">
     <mat-progress-spinner color="primary" mode="indeterminate">
     </mat-progress-spinner>
   </div>
-  <stockChart *ngIf="!isLoading"
-    [dataPoints]='dataPoints' 
-    [ticker]='tickerTitle'
-    [chartType]='selectedChart'
-  ></stockChart>
+  <div *ngIf="!isLoading">
+    <h1> {{ watchlistTitle }} </h1>
+    <mat-card *ngFor="let item of stocks">
+      <mat-card-header><h1>{{item["longName"]}} ({{item["symbol"]}})</h1></mat-card-header>
+      <mat-card-subtitle>Timezone: {{item["exchangeTimezoneName"]}}. Market status: {{item["marketState"]}}</mat-card-subtitle>
+      <mat-card-content>
+        <p>Previous close: <strong>{{item["regularMarketPreviousClose"] | currency:item["currency"] }}</strong></p>
+        <p>Current price: <strong>{{item["ask"] | currency:item["currency"]}}</strong></p>
+        <!-- <p>Daily change {{(item["ask"] - item["regularMarketPreviousClose"]) / 100 | percent }}</p> -->
+      </mat-card-content>
+      </mat-card>
+  </div>
 </div>
 
