--- a/frontend/src/app/news/news.component.scss
+++ b/frontend/src/app/news/news.component.scss
@@ -61,8 +61,9 @@ h2 {
 }
 
 .content {
-    margin-top:0.5em;
-    margin-bottom:0.5em;
+    height:100vh !important;
+    padding:0 !important;
+    margin: 0 !important;
     background: transparent;
 }
 
