--- a/frontend/src/app/stocks/stock-detail/stock-detail.component.html
+++ b/frontend/src/app/stocks/stock-detail/stock-detail.component.html
@@ -1,7 +1,7 @@
 <div class="content mat-elevation-z5">
 
   <div>
-    <button mat-button color="primary" (click)="onBack(false)">
+    <button mat-button color="primary" (click)="onBack()">
       <mat-icon>arrow_back</mat-icon>
       <p>Go back</p>
     </button>
@@ -31,19 +31,18 @@
     </mat-expansion-panel-header>
     <div *ngIf="detailsLoaded">
       <h3>
-        <span *ngIf="details.name"> {{details.name}} </span>
-        <span *ngIf="details.name == null"> There is no information on this security</span>
+        <span *ngIf="details.name"> <strong>{{details.name}} </strong></span>
+        <!-- <span *ngIf="details.name == null"> There is no information on this security</span> -->
       </h3>
       <p>
         <span *ngIf="details.description"> {{details.description}} </span>
       </p>
       <div class="flexbox"> 
         <p>
-          <span *ngIf="details.sic_description"> Industry - {{details.sic_description}} </span>
+          <span *ngIf="details.sector"> Sector - {{details.sector}} </span>
           <span *ngIf="details.primaryExchange"> Primary exchange  - {{details.primaryExchange}} </span>
           <span *ngIf="details.employees">  Employes - {{details.employees}} </span>
-          <span *ngIf="details.sic_description"> Market cap of {{details.marketCap | currency:'USD':'symbol':"1.2-3"}} </span>
-          <span *ngIf="details.listDate"> Initial public offering happened {{details.listDate | date}}</span>
+          <span *ngIf="details.country"> Based in - {{details.city}}, {{details.country}}</span>
           <span *ngIf="details.companyUrl"><a href={{details.companyUrl}}> {{details.companyUrl}}</a></span>
         </p>
       </div>  
