--- a/frontend/src/app/stocks/stocks.component.html
+++ b/frontend/src/app/stocks/stocks.component.html
@@ -1,50 +1,57 @@
 <div class="content mat-elevation-z5">
-  <form>
-    <button mat-button color="primary" (click)="onBack()">
-      <mat-icon>home</mat-icon>
-    </button>
-    <mat-form-field class="searchBar">
-      <mat-label>Search</mat-label>
-      <input
-        (keyup)="applyFilter($any($event.target).value)"
-        matInput
-        placeholder="TSLA"
-      />
+  <div class="center">
+    <mat-form-field [formGroup]="searchForm" appearance="fill">
+        <mat-label>Search for a stock</mat-label>
+        <input matInput formControlName="search" type="text"/>
+        <mat-icon matPrefix>search</mat-icon>
     </mat-form-field>
-  </form>
+  </div>
+  
+  <ng-container *ngIf="stockList.length;else notFound;">
+    <div *ngFor="let stock of stockList">
+      <h1>{{stock}}</h1>
+    </div>
+  </ng-container>
+  <ng-template #notFound>
+    <div>
+      <h1> Not found </h1>
+    </div>
+  </ng-template>
 
   <table mat-table [dataSource]="dataSource">
     <!-- Ticker Column -->
     <ng-container matColumnDef="Ticker">
       <th mat-header-cell *matHeaderCellDef>Ticker</th>
       <td mat-cell *matCellDef="let element">
-        <b>{{ element.T }}</b>
+        {{ element.T }}
       </td>
     </ng-container>
 
     <!-- Volume Column -->
-    <ng-container matColumnDef="Volume">
-      <th mat-header-cell *matHeaderCellDef>Volume</th>
-      <td mat-cell *matCellDef="let element">{{ element.V | number }}</td>
+    <ng-container matColumnDef="PE ratio">
+      <th mat-header-cell *matHeaderCellDef>P/E</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.PE | number: "1.2-2" }}
+      </td>
     </ng-container>
 
-    <!-- Open Column -->
-    <ng-container matColumnDef="Open">
-      <th mat-header-cell *matHeaderCellDef>Open</th>
+    <!-- Price Column -->
+    <ng-container matColumnDef="Price">
+      <th mat-header-cell *matHeaderCellDef>Price</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.O | currency:'USD':'symbol':"1.2-3"}}
+        {{ element.P | currency: element.C:"symbol":"1.2-3" }}
       </td>
     </ng-container>
 
     <!-- Close Column -->
-    <ng-container matColumnDef="Close">
-      <th mat-header-cell *matHeaderCellDef>Close</th>
+    <ng-container matColumnDef="Rating">
+      <th mat-header-cell *matHeaderCellDef>Rating</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.C | currency:'USD':'symbol':"1.2-3"}}
+        {{ element.R }}
       </td>
     </ng-container>
 
-    <!-- Change Column -->
+    Change Column
     <ng-container matColumnDef="Change">
       <th mat-header-cell *matHeaderCellDef>Change</th>
       <td
@@ -64,15 +71,15 @@
         <span *ngIf="element.M == 0">
           <mat-icon>trending_flat</mat-icon>
         </span>
-        {{ element.M + "%" }}
+        {{ element.M | number: "1.2-2" }}%
       </td>
     </ng-container>
-    <!-- Table entries -->
-    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true;"></tr>
+    --> Table entries
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
     <tr
       mat-row
       *matRowDef="let row; columns: displayedColumns"
-      [routerLink]="['/stocks', row.T]"
+      [routerLink]="['/stocks', row.S]"
     ></tr>
   </table>
   <!-- Loader -->
