--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -23,7 +23,7 @@
           <mat-icon>trending_flat</mat-icon>
         </span>
         <h2>
-          {{ dailyMovement + "%" }}
+          {{ dailyMovement.toFixed(2) + "%" }}
         </h2>
       </div>
       <mat-form-field appearance="fill">
@@ -39,37 +39,61 @@
       [ticker]="chartTitle"
       [chartType]="selectedChart"
     ></stockChart>
-    <div class="centre"><h1>{{watchlistTitle}}</h1></div>
-    <ng-template ngFor let-item [ngForOf]="stocks" let-i="index">
-      <mat-card>
-          <mat-card-content>
-            <a href="../stocks/{{ item['symbol'] }}">
-            <div class="hoverable">
-            <mat-card-header>
-              <mat-card-title-group>
-                <mat-card-title
-                  ><h1>{{ item["longName"] }}</h1></mat-card-title
-                >
-                <mat-card-subtitle
-                  ><p>
-                    {{ item["exchangeTimezoneName"] }}
-                  </p>
-                </mat-card-subtitle>
-              </mat-card-title-group>
-            </mat-card-header>
-            <h3>
-              Previous close:
-              {{
-                item["regularMarketPreviousClose"] | currency: item["currency"]
-              }}
-              . Current price:
-              {{ item["ask"] | currency: item["currency"] }}
-            </h3>
-          </div>
-          </a>
-          <button mat-button *ngIf="editMode"><h2>Remove from watchlist</h2></button>
-          </mat-card-content>
-      </mat-card>
-    </ng-template>
+
+    <div class="center">
+      <div class="fundTitle">
+        <h1>
+          <strong>
+            {{ watchlistTitle }}
+          </strong>
+        </h1>
+        <button *ngIf="(editmodeObs | async) == false" mat-button class="toTheSideBtn" (click)="editmode.next(true)">
+          <mat-icon>editMode</mat-icon>
+        </button>
+        <button *ngIf="(editmodeObs | async) == true" mat-button class="toTheSideBtn" (click)="editmode.next(false)">
+          <mat-icon>cancel</mat-icon>
+        </button>
+      </div>
+      <div class="cardScroll">
+        <ng-template ngFor let-item [ngForOf]="stocks" let-i="index">
+          <mat-card>
+            <mat-card-content>
+              <a href="../stocks/{{ item['symbol'] }}">
+                <div class="hoverable">
+                  <mat-card-header>
+                    <mat-card-title-group>
+                      <mat-card-title
+                        ><h1>{{ item["longName"] }}</h1></mat-card-title
+                      >
+                      <mat-card-subtitle
+                        ><p>
+                          {{ item["exchangeTimezoneName"] }}
+                        </p>
+                      </mat-card-subtitle>
+                    </mat-card-title-group>
+                  </mat-card-header>
+                  <h3>
+                    Previous close:
+                    {{
+                      item["regularMarketPreviousClose"]
+                        | currency : item["currency"]
+                    }}
+                    . Current price:
+                    {{ item["regularMarketPrice"] | currency : item["currency"] }}
+                    . Change: 
+                    {{ item["regularMarketChangePercent"].toFixed(2)}}%
+                  </h3>
+                </div>
+              </a>
+              <span *ngIf="editmodeObs | async">
+              <button class="remove" mat-button>
+                <h3>Remove {{item["symbol"]}} from watchlist</h3>
+              </button>
+              </span>
+            </mat-card-content>
+          </mat-card>
+        </ng-template>
+      </div>
+    </div>
   </div>
 </div>
