--- a/frontend/src/app/stocks/stocks.component.html
+++ b/frontend/src/app/stocks/stocks.component.html
@@ -1,22 +1,43 @@
 <div class="content mat-elevation-z5">
   <div class="center">
     <mat-form-field [formGroup]="searchForm" appearance="fill">
-        <mat-label>Search for a stock</mat-label>
-        <input matInput formControlName="search" type="text"/>
-        <mat-icon matPrefix>search</mat-icon>
+      <mat-label>Search for a stock</mat-label>
+      <input 
+      matInput 
+      formControlName="search" 
+      type="text"
+      [matAutocomplete]="auto"
+      />
+      <mat-icon matPrefix>search</mat-icon>
+      <mat-autocomplete #auto="matAutocomplete">
+        <ng-container *ngIf="stockList.length && stockList[0] != 'Not Found'; else notFound">
+        <mat-option *ngFor="let stock of stockList" [value]="stock" [routerLink]="['/stocks', stock]">
+          {{stock}}
+        </mat-option>
+        </ng-container>
+        <ng-template #notFound>
+          <mat-option>
+            No results
+          </mat-option>
+        </ng-template>
+      </mat-autocomplete>
     </mat-form-field>
   </div>
-  
-  <ng-container *ngIf="stockList.length;else notFound;">
-    <div *ngFor="let stock of stockList">
-      <h1>{{stock}}</h1>
-    </div>
-  </ng-container>
-  <ng-template #notFound>
-    <div>
-      <h1> Not found </h1>
-    </div>
-  </ng-template>
+
+  <!-- Search results -->
+  <!-- <div class="searchResults mat-elevation-z5">
+    <ng-container *ngIf="stockList.length; else notFound">
+      <div *ngFor="let stock of stockList">
+        <h1>{{ stock }}</h1>
+      </div>
+    </ng-container>
+    <ng-template #notFound>
+      <div>
+        <h1>Not found</h1>
+      </div>
+    </ng-template>
+  </div> -->
+
 
   <table mat-table [dataSource]="dataSource">
     <!-- Ticker Column -->
@@ -31,7 +52,7 @@
     <ng-container matColumnDef="PE ratio">
       <th mat-header-cell *matHeaderCellDef>P/E</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.PE | number: "1.2-2" }}
+        {{ element.PE | number : "1.2-2" }}
       </td>
     </ng-container>
 
@@ -39,7 +60,7 @@
     <ng-container matColumnDef="Price">
       <th mat-header-cell *matHeaderCellDef>Price</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.P | currency: element.C:"symbol":"1.2-3" }}
+        {{ element.P | currency : element.C : "symbol" : "1.2-3" }}
       </td>
     </ng-container>
 
@@ -71,7 +92,7 @@
         <span *ngIf="element.M == 0">
           <mat-icon>trending_flat</mat-icon>
         </span>
-        {{ element.M | number: "1.2-2" }}%
+        {{ element.M | number : "1.2-2" }}%
       </td>
     </ng-container>
     --> Table entries
