--- a/frontend/src/app/login/confirmation-dialog.html
+++ b/frontend/src/app/login/confirmation-dialog.html
@@ -12,6 +12,6 @@
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="center">
-	<button mat-raised-button mat-dialog-close tabindex="-1">{{cancelButtonText}}</button>
-    <button mat-raised-button color="primary" (click)="register()" tabindex="1">{{confirmButtonText}}</button>
+	<button mat-raised-button type="button" mat-dialog-close tabindex="-1">{{cancelButtonText}}</button>
+    <button mat-raised-button color="primary" type="submit" (click)="register()" tabindex="1">{{confirmButtonText}}</button>
 </mat-dialog-actions>
