--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -69,7 +69,7 @@ mat-divider {
   align-items: center;
   justify-content: center;
   div {
-    display: inline-block;
+    display: block;
     height: auto;
     width: auto;
   }
